--- a/style.css
+++ b/style.css
@@ -49,9 +49,7 @@ section{
     margin-right: 30px;
     margin-top: 130px;
     margin-left: 120px;
-    
-    width: 70%;
-   
+    width:70%;  
 }
 
 .middle-centre{
@@ -61,7 +59,8 @@ section{
 .box-3{
     width: 30%;
     float: left;
-    margin-left: 4%;
+    margin-left: 2%;
+    margin-right: 2%;
     padding-left: 20px;
     padding-top: 20px;
     margin-top: 10px;
